--- a/index.html
+++ b/index.html
@@ -11,29 +11,27 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
+            <div id="imagem"> </div>
 
-            </div>
+                <div id="formulario">
+                        <h1>Login</h1>
+                        <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                    <form action="login.php" method="post">
+                        <div class="campo">
+                            <span class="material-icons">person</span>
+                            <input class="teste" type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                            <label for="ilogin">Login</label>
+                        </div>
+                        <div class="campo">
+                            <span class="material-icons">key</span>
+                            <input class="teste" type="password" name="senha" id="isenha" placeholder="Digite sua senha" autocomplete="current-password" required minlength="8" maxlength="15">
+                            <label for="isenha">Senha</label>
+                        </div>
+                            <input type="submit" value="Entrar">
+                            <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-icons">mail</span></a>
+                    </form>
 
-            <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-                    <div class="campo">
-                        <span class="material-icons">person</span>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
-                        <label for="ilogin">Login</label>
-                    </div>
-                    <div class="campo">
-                        <span class="material-icons">key</span>
-                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" autocomplete="current-password" required minlength="8" maxlength="15">
-                        <label for="isenha">Senha</label>
-                    </div>
-                    <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-icons">mail</span></a>
-                </form>
-
-            </div>
+                </div>
         </section>        
     </main>
     
